fix(?) 404 errors created by _ fname prefix

--- a/parameters_report.qmd
+++ b/parameters_report.qmd
@@ -1,6 +1,5 @@
 ---
 title: "Parameters Report"
-#echo: false
 code-fold: true
 ---
 
@@ -49,20 +48,46 @@ Render a report for each parameter:
 #| label: render wq param reports
 #| code-summary: (code) render wq param reports
 #| include: false  # supress quarto messages
-for (wq_param in unique_parameters) {
-  params = list(
-    parameter_name = wq_param
-  )
+library(purrr)
+library(here)
 
-  filepath = paste("parameter_report_", params$parameter_name, ".html", sep = "")
+# Assuming `unique_parameters` is a vector, convert it to a dataframe
+params_df <- tibble::tibble(parameter_name = unique_parameters)
+
+# Define the wrapper function for quarto_render
+render_quarto <- function(parameter_name) {
+  message(paste("Rendering for", parameter_name)) # Printing message
+  filepath <- paste0("parameter_report_", parameter_name, ".html")
   
-  quarto::quarto_render(input = "_parameter_analysis.qmd", 
-                 output_format = "html", 
-                 execute_params = params,
-                 output_file = filepath,
-                 execute_dir = "./"
+  quarto::quarto_render(
+    input = here::here("parameter_report_template.qmd"), 
+    output_format = "html",
+    execute_params = list(parameter_name = parameter_name),
+    output_file = filepath
+    # You might adjust execute_dir if needed, based on your project structure
   )
 }
+
+# Use pwalk to apply the function across each row of the dataframe
+pwalk(list(params_df), render_quarto, .progress = interactive())
+
+# === alternative: ==========================================
+# for (wq_param in unique_parameters) {
+#   print(paste("rendering for ", wq_param))
+#   params = list(
+#     parameter_name = wq_param
+#   )
+# 
+#   filepath = paste("parameter_report_", params$parameter_name, ".html", sep = "")
+#   
+#   # NOTE: this is 
+#   quarto::quarto_render(input = "_parameter_analysis.qmd", 
+#                  output_format = "html", 
+#                  execute_params = params,
+#                  output_file = filepath,
+#                  # execute_dir = "./"
+#   )
+# }
 ```
 
 ```{R}
