--- a/index.qmd
+++ b/index.qmd
@@ -12,7 +12,7 @@ Reports are generated
 
 * for each Water Quality (WQ) parameter
 * (coming soon) for each data provider
-* (coming soon) a QA filtering across all sites
+* (coming soon) recommended quality control filtering across all sites
 * details on the data files provided
 
-The cleaned version of this data is fed into the [FL DEP WQ Dashboard](https://github.com/USF-IMARS/fl-coral-reef-fcr-water-quality-dashboard) for site-by-site exploratoration.
+The cleaned version of this data is fed into the [FL DEP WQ Dashboard](https://github.com/USF-IMARS/fl-coral-reef-fcr-water-quality-dashboard) for site-by-site exploration.
