switch getData to use cleaned & + getRawData fn

--- a/sites_qc.qmd
+++ b/sites_qc.qmd
@@ -29,7 +29,7 @@ source(here("R/getData.R"))
 
 ```{R}
 #| code-summary: load data & skim
-df <- getData()
+df <- getRawData()
 print(skimr::skim(df))
 ```
 
