--- a/parameters.qmd
+++ b/parameters.qmd
@@ -28,6 +28,7 @@ data <- getData()
 ```
 
 # Parameters
+Using the clean data after completing Sites QC.
 
 Available parameters:
 
@@ -47,4 +48,24 @@ print(unique_parameters)
 #     labs(title="Violin Plot of Values by Parameter",
 #          x="Parameter",
 #          y="Value")
+
+# TODO: print n observations per parameter
+
 ```
+
+
+# TODO: filter rows with param values too high
+
+param           | min | max
+----------------|-----|-------
+Ammonium        | 0   | 6
+Nitrate         | 0   | 10
+Chlorophylll    | 0   | 75
+Nitrate-Nitrate | 0   | 8 
+Nitrite         | 0   | 0.5
+Nitrogen Total  | 0   | 6
+Nitrogen Total K. | 0  | 5
+Orthophosphate  | 0  | 10
+Phosphorus total | 0  | 2
+Silica          | 0 | 20 
+Turbidity       | 0  | 200
