--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ description: DEP Water Quality Data Report
 code-fold: true
 ---
 
-This collection of reports summarizes data provided by the Florida Department of Environmental Protection.
+This collection of reports summarizes data provided by the Florida Department of Environmental Protection via [SEACAR](https://data.florida-seacar.org/).
 
 The recommended quality control cleaning steps are applied and explained.
 
@@ -16,3 +16,5 @@ Reports are generated
 * details on the data files provided
 
 The cleaned version of this data is fed into the [FL DEP WQ Dashboard](https://github.com/USF-IMARS/fl-coral-reef-fcr-water-quality-dashboard) for site-by-site exploration.
+
+Source code for this website (and associated analysis) can be found at [github/USF-IMaRS/dep-wq-data-report](https://github.com/USF-IMARS/dep-wq-data-report).
